# CIIC4050-project

./: README.md
PP1/air_control_c/: CMakeLists.txt  air_c
PP1/air_control_c/include/: functions.h
PP1/air_control_c/src/: functions.c  main.c
PP1/air_control_py/: main.py
PP1/air_control_py/src/: main.py
PP1/ground_control/: CMakeLists.txt  ground
PP1/ground_control/src/: main.c
PP1/test/: air_c  cpplint_report.txt  ground
PP1/testWindows/: air_c  ground
